Added bootstrap to the project, implemented service + display component

--- a/CrossComponentCommunicationExamples/projects/services/src/app/components/selection/selection.component.html
+++ b/CrossComponentCommunicationExamples/projects/services/src/app/components/selection/selection.component.html
@@ -1,1 +1,7 @@
-<p>selection works!</p>
+<div>
+  <h3>Select an animal</h3>
+  <button type="button" class="btn btn-primary" (click)="onClick(Animal.Giraffe)">Giraffe</button>
+  <button type="button" class="btn btn-primary" (click)="onClick(Animal.Monkey)">Monkey</button>
+  <button type="button" class="btn btn-primary" (click)="onClick(Animal.Donkey)">Donkey</button>
+</div>
+
