--- a/CrossComponentCommunicationExamples/projects/services/src/app/components/selection/selection.component.html
+++ b/CrossComponentCommunicationExamples/projects/services/src/app/components/selection/selection.component.html
@@ -1,7 +1,22 @@
 <div>
   <h3>Select an animal</h3>
-  <button type="button" class="btn btn-primary" (click)="onClick(Animal.Giraffe)">Giraffe</button>
-  <button type="button" class="btn btn-primary" (click)="onClick(Animal.Monkey)">Monkey</button>
-  <button type="button" class="btn btn-primary" (click)="onClick(Animal.Donkey)">Donkey</button>
+  <button
+      type="button"
+      class="btn btn-primary"
+      (click)="onClick(Animal.Giraffe)"
+      [ngClass]="{ 'selected':  (selectedAnimal$ | async) === Animal.Giraffe}"
+  ><span>Giraffe</span></button>
+  <button
+      type="button"
+      class="btn btn-primary"
+      (click)="onClick(Animal.Monkey)"
+      [ngClass]="{ 'selected':  (selectedAnimal$ | async) === Animal.Monkey}"
+  >Monkey</button>
+  <button
+      type="button"
+      class="btn btn-primary"
+      (click)="onClick(Animal.Donkey)"
+      [ngClass]="{ 'selected':  (selectedAnimal$ | async) === Animal.Donkey}"
+  >Donkey</button>
 </div>
 
