--- a/CrossComponentCommunicationExamples/projects/ngrx/src/app/components/display/display.component.html
+++ b/CrossComponentCommunicationExamples/projects/ngrx/src/app/components/display/display.component.html
@@ -1,1 +1,8 @@
-<p>display works!</p>
+<div>
+  <ng-container [ngSwitch]="selectedAnimal$ | async">
+    <img *ngSwitchCase="Animal.Giraffe" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Giraffa_camelopardalis_reticulata_01%2C_flip.jpg/800px-Giraffa_camelopardalis_reticulata_01%2C_flip.jpg">
+    <img *ngSwitchCase="Animal.Monkey" src="https://upload.wikimedia.org/wikipedia/commons/4/43/Bonnet_macaque_%28Macaca_radiata%29_Photograph_By_Shantanu_Kuveskar.jpg">
+    <img *ngSwitchCase="Animal.Donkey" src="https://upload.wikimedia.org/wikipedia/commons/1/1a/Donkey_in_Clovelly%2C_North_Devon%2C_England.jpg">
+  </ng-container>
+  <button type="button" class="btn btn-secondary" (click)="onReset()">Reset selection</button>
+</div>
