Migrated control flow

--- a/projects/data-binding/src/app/components/display/display.component.html
+++ b/projects/data-binding/src/app/components/display/display.component.html
@@ -1,8 +1,14 @@
 <div>
-  <ng-container [ngSwitch]="selectedAnimal">
-    <img *ngSwitchCase="Animal.Giraffe" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Giraffa_camelopardalis_reticulata_01%2C_flip.jpg/800px-Giraffa_camelopardalis_reticulata_01%2C_flip.jpg">
-    <img *ngSwitchCase="Animal.Monkey" src="https://upload.wikimedia.org/wikipedia/commons/4/43/Bonnet_macaque_%28Macaca_radiata%29_Photograph_By_Shantanu_Kuveskar.jpg">
-    <img *ngSwitchCase="Animal.Donkey" src="https://upload.wikimedia.org/wikipedia/commons/1/1a/Donkey_in_Clovelly%2C_North_Devon%2C_England.jpg">
-  </ng-container>
+  @switch (selectedAnimal) {
+    @case (Animal.Giraffe) {
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Giraffa_camelopardalis_reticulata_01%2C_flip.jpg/800px-Giraffa_camelopardalis_reticulata_01%2C_flip.jpg">
+    }
+    @case (Animal.Monkey) {
+      <img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Bonnet_macaque_%28Macaca_radiata%29_Photograph_By_Shantanu_Kuveskar.jpg">
+    }
+    @case (Animal.Donkey) {
+      <img src="https://upload.wikimedia.org/wikipedia/commons/1/1a/Donkey_in_Clovelly%2C_North_Devon%2C_England.jpg">
+    }
+  }
   <button type="button" class="btn btn-secondary" (click)="onReset()">Reset selection</button>
 </div>
