Cleanup and remove unnecessary ngclass

--- a/projects/signals/src/app/components/selection/selection.component.html
+++ b/projects/signals/src/app/components/selection/selection.component.html
@@ -4,19 +4,19 @@
       type="button"
       class="btn btn-primary"
       (click)="onClick(Animal.Giraffe)"
-      [ngClass]="{ 'selected':  selectedAnimal() === Animal.Giraffe}"
+      [class.selected]="selectedAnimal() === Animal.Giraffe"
   ><span>Giraffe</span></button>
   <button
       type="button"
       class="btn btn-primary"
       (click)="onClick(Animal.Monkey)"
-      [ngClass]="{ 'selected':  selectedAnimal() === Animal.Monkey}"
+      [class.selected]="selectedAnimal() === Animal.Monkey"
   >Monkey</button>
   <button
       type="button"
       class="btn btn-primary"
       (click)="onClick(Animal.Donkey)"
-      [ngClass]="{ 'selected':  selectedAnimal() === Animal.Donkey}"
+      [class.selected]="selectedAnimal() === Animal.Donkey"
   >Donkey</button>
 </div>
 
