--- a/projects/ngrx/src/app/components/selection/selection.component.html
+++ b/projects/ngrx/src/app/components/selection/selection.component.html
@@ -4,19 +4,19 @@
       type="button"
       class="btn btn-primary"
       (click)="onClick(Animal.Giraffe)"
-      [ngClass]="{ 'selected':  (selectedAnimal$ | async) === Animal.Giraffe}"
+      [class.selected]="(selectedAnimal$ | async) === Animal.Giraffe"
   ><span>Giraffe</span></button>
   <button
       type="button"
       class="btn btn-primary"
       (click)="onClick(Animal.Monkey)"
-      [ngClass]="{ 'selected':  (selectedAnimal$ | async) === Animal.Monkey}"
+      [class.selected]="(selectedAnimal$ | async) === Animal.Monkey"
   >Monkey</button>
   <button
       type="button"
       class="btn btn-primary"
       (click)="onClick(Animal.Donkey)"
-      [ngClass]="{ 'selected':  (selectedAnimal$ | async) === Animal.Donkey}"
+      [class.selected]="(selectedAnimal$ | async) === Animal.Donkey"
   >Donkey</button>
 </div>
 
